[project]
name = "recall-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.23.2",
    "httpx>=0.25.0",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
